tests/errors/preprocessor/lf_end/space_(repeat_ident).c
#define qw(a) (a - 10)
#define qw( b) (b - 20)

int main()
{
	int x, y;
	x = 10;
	y = 20;

	qw(x);
	return 0;
}
